--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exp.js",
+  "name": "aexpr",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -11,7 +11,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/korbinzhao/exp.js"
+    "url": "https://github.com/korbinzhao/aexpr"
   },
   "devDependencies": {
     "jest": "^28.1.0",
